--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 MONGO_URL=mongodb+srv://harshit:harshit@cluster0.bpkzo.mongodb.net/microsoftDatabase?retryWrites=true&w=majority 
-pass=my_password
+pass=microsofthk
 jwtSecret=harshitmicrosoftproject
+user=microsoft.teams.hk@gmail.com
