--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 MONGO_URL=mongodb+srv://harshit:harshit@cluster0.bpkzo.mongodb.net/microsoftDatabase?retryWrites=true&w=majority 
-pass=microsofthk
+pass=YOUR_EMAIL_ID_PASSWORD
 jwtSecret=harshitmicrosoftproject
-user=microsoft.teams.hk@gmail.com
+user=YOUR_EMAIL_ID
